correcciones github pages

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Dashboard Personal"
 description: "Portfolio, Devlogs, Proyectos y Recursos"
-baseurl: ""
+baseurl: "/Chispi-Page"
 url: "https://ChispiDEV.github.io"
 markdown: kramdown
 plugins:
