--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches: [main]
 
+permissions:
+  contents: write  # 🔑 Necesario para hacer push al branch gh-pages
+
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
@@ -24,11 +27,11 @@ jobs:
       - name: Install dependencies
         run: bundle install
 
-      - name: Build site
+      - name: Build site with Jekyll
         run: bundle exec jekyll build
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}  # Agrega tu token como secreto GH_TOKEN
+          github_token: ${{ secrets.GITHUB_TOKEN }}  # ✅ Token automático, no necesitas GH_PAT
           publish_dir: ./_site
