--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -33,7 +33,7 @@
     - name: Seaborn
       logo: python
       color: 43BCCD
-    - name: scikit-learn
+    - name: scikit--learn
       logo: scikit-learn
       color: F7931E
     - name: Pytest
