--- a/_config.yml
+++ b/_config.yml
@@ -38,6 +38,13 @@ collections:
 defaults:
   - scope:
       path: ""
+    values:
+      layout: default
+      lang: es
+      show_header: true
+      hero: false   # o true, si la mayoría lo usan
+  - scope:
+      path: ""
       type: "posts"
     values:
       layout: devlog
