arreglar enlaces y añadir páginas 404, mantenimiento y en proceso

--- a/_data/buttons.yml
+++ b/_data/buttons.yml
@@ -16,10 +16,10 @@ en:
   - text: "Get to know me"
     url: "/sobre-mi.html"
     class: "btn-outline-verde-1"
-  - text: "Take a look to my projects"
+  - text: "Check my projects"
     url: "/proyectos.html"
     class: "btn-outline-verde-4"
-  - text: "Read my blogs"
+  - text: "Read my blog"
     url: "/posts.html"
     class: "btn-outline-verde-3"
   - text: "Contact me"
