--- a/_config.yml
+++ b/_config.yml
@@ -70,10 +70,49 @@ defaults:
 languages: ["es", "en"]
 default_lang: "es"
 
-# Archivos y carpetas a incluir en la compilación
-include:
-  - assets/css/main.css
-  - assets/js/dist
+# Configuración de assets
+assets:
+  css:
+    main: "/assets/css/style.css"
+    vendors:
+      - "/assets/css/vendors/tippy.css"
+      - "/assets/css/vendors/particles.css"
+  
+  js:
+    main: "/assets/js/app.js"
+    vendors:
+      - "/assets/js/vendors/particles.js"
+      - "/assets/js/vendors/tippy.js"
+    modules:
+      - "/assets/js/modules/sidebar.js"
+      - "/assets/js/modules/scroll.js"
+      - "/assets/js/modules/theme.js"
+      - "/assets/js/modules/language.js"
+      - "/assets/js/modules/particles.js"
+      - "/assets/js/modules/tooltips.js"
+      - "/assets/js/modules/popups.js"
+    config:
+      - "/assets/particles/particles-config.js"
+
+# Orden de carga (importante para dependencias)
+load_order:
+  css:
+    - vendors
+    - main
+  js:
+    - vendors
+    - config
+    - modules
+    - main
+
+# CDNs externos
+cdns:
+  css:
+    - "https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css"
+  js:
+    - "https://kit.fontawesome.com/98ca02228e.js"
+    - "https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    - "https://www.googletagmanager.com/gtag/js?id=G-KKN4WJL07V"
 
 # Archivos/carpetas que no deben procesarse
 exclude:
