Actualización index y about. Creación de auditor y plantillas

--- a/package.json
+++ b/package.json
@@ -5,13 +5,20 @@
     "./*": "./*"
   },
   "scripts": {
+    "audit": "node scripts/auditor/auditor-cli.js",
+    "audit:fix": "node scripts/auditor/fixers/auto-fixer.js",
+    "audit:html": "node scripts/auditor/analyzers/html-analyzer.js",
+    "audit:css": "node scripts/auditor/analyzers/css-analyzer.js",
+    "audit:js": "node scripts/auditor/analyzers/js-analyzer.js",
+    "audit:report": "node scripts/auditor/core/report-generator.js",
     "check-structure": "node scripts/check-structure.js",
     "check-structure-debug": "node scripts/check-structure-debug.js",
     "verify": "node scripts/verify-functionality.js",
-    "full-check": "npm run check-structure && npm run verify",
-    "build:dev": "set NODE_ENV=development&& node scripts/build/adaptive-build.js",
-    "build:prod": "set NODE_ENV=production&& node scripts/build/adaptive-build.js",
-    "build": "node scripts/build/adaptive-build.js",
+    "full-check": "npm run check-structure && npm run verify && npm run audit",
+    "build:template": "node scripts/build/template-build.js",
+    "build:dev": "npm run build:template && node scripts/build/adaptive-build.js",
+    "build:prod": "npm run build:template && set NODE_ENV=production&& node scripts/build/adaptive-build.js",
+    "build": "npm run build:template && node scripts/build/adaptive-build.js",
     "test": "node scripts/test/test-runner.js",
     "test:build": "npm run build:dev && npm run test",
     "dev": "npm run build:dev && npx serve dist",
