modificación archivos para facilitar modificación de datos
Falta por modificar About, este es el código a aplicar:
<!DOCTYPE html>
<html lang="es" data-theme="light">
<head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Chispi Page | Sobre mí</title>
    <meta name="description" content="Conoce más sobre Cristina (Chispi) - Desarrolladora, Diseñadora y Analista de Datos">
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
    <link rel="stylesheet" href="/assets/css/style.css">
    <link rel="icon" href="/assets/icons/favicon.ico">
</head>
<body>
<!--# include file="../includes/components/navigation/navbar.html" -->

<section class="about-hero" data-theme-aware
         data-img-dark="/assets/img/sobre-mi-bg-dark.jpg"
         data-img-light="/assets/img/sobre-mi-bg-light.jpg">
    <div class="container hero-content">
        <div class="text-box">
            <h1 class="hero-title">Sobre mí</h1>
            <p class="hero-subtitle">Desarrolladora | Diseñadora | Analista de Datos</p>
        </div>
    </div>
</section>

<main class="main-content">
    <section id="sobre-mi" class="section-padding">
        <div class="container max-width-lg">

            <!--# include file="../includes/generated/bio-es.html" -->

            <!-- 🔧 Habilidades -->
            <div class="grid-item grid-item-full">
                <div class="card card-hoja">
                    <h3 class="section-subtitle">🔧 Habilidades</h3>

                    <div class="skills-grid">
                        <!--# include file="../includes/generated/skills-languages-es.html" -->
                        <!-- Más categorías de skills generadas automáticamente -->
                    </div>
                </div>
            </div>

            <!-- 🖥️ Tecnologías principales -->
            <div class="grid-item">
                <div class="card card-mar">
                    <h3 

--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "audit:report": "node scripts/auditor/core/report-generator.js",
     "check-structure": "node scripts/check-structure.js",
     "check-structure-debug": "node scripts/check-structure-debug.js",
+    "content:generate": "node scripts/build/content-processor.js",
     "verify": "node scripts/verify-functionality.js",
     "full-check": "npm run check-structure && npm run verify && npm run audit",
-    "build:template": "node scripts/build/template-build.js",
+    "build:template": "npm run content:generate && node scripts/build/template-build.js",
     "build:dev": "npm run build:template && node scripts/build/adaptive-build.js",
     "build:prod": "npm run build:template && set NODE_ENV=production&& node scripts/build/adaptive-build.js",
     "build": "npm run build:template && node scripts/build/adaptive-build.js",
