--- a/package.json
+++ b/package.json
@@ -5,23 +5,25 @@
     "./*": "./*"
   },
   "scripts": {
+    "content:generate": "node scripts/build/content-processor.js",
+    "build:template": "npm run content:generate && node scripts/build/template-build.js",
+    "build:dev": "npm run build:template && node scripts/build/adaptive-build.js",
+    "build:prod": "npm run build:template && set NODE_ENV=production&& node scripts/build/adaptive-build.js",
+    "build": "npm run build:template && node scripts/build/adaptive-build.js",
+
+    "check-structure": "node scripts/check-structure.js",
+    "verify": "node scripts/verify-functionality.js",
+    "full-check": "npm run check-structure && npm run verify",
+
     "audit": "node scripts/auditor/auditor-cli.js",
     "audit:fix": "node scripts/auditor/fixers/auto-fixer.js",
     "audit:html": "node scripts/auditor/analyzers/html-analyzer.js",
     "audit:css": "node scripts/auditor/analyzers/css-analyzer.js",
     "audit:js": "node scripts/auditor/analyzers/js-analyzer.js",
-    "audit:report": "node scripts/auditor/core/report-generator.js",
-    "check-structure": "node scripts/check-structure.js",
-    "check-structure-debug": "node scripts/check-structure-debug.js",
-    "content:generate": "node scripts/build/content-processor.js",
-    "verify": "node scripts/verify-functionality.js",
-    "full-check": "npm run check-structure && npm run verify && npm run audit",
-    "build:template": "npm run content:generate && node scripts/build/template-build.js",
-    "build:dev": "npm run build:template && node scripts/build/adaptive-build.js",
-    "build:prod": "npm run build:template && set NODE_ENV=production&& node scripts/build/adaptive-build.js",
-    "build": "npm run build:template && node scripts/build/adaptive-build.js",
+
     "test": "node scripts/test/test-runner.js",
     "test:build": "npm run build:dev && npm run test",
+
     "dev": "npm run build:dev && npx serve dist",
     "deploy": "node scripts/deploy/deploy.js",
     "clean": "rm -rf dist logs",
