--- a/package.json
+++ b/package.json
@@ -5,26 +5,33 @@
     "./*": "./*"
   },
   "scripts": {
-    "content:generate": "node scripts/build/content-processor.js",
-    "build:template": "npm run content:generate && node scripts/build/template-build.js",
+    "organize": "node scripts/organize-scripts.js",
+    "cleanup": "node scripts/cleanup-organization.js",
+
+    "dev": "npm run build:dev && npx serve dist",
+    "build": "npm run build:template && node scripts/build/adaptive-build.js",
     "build:dev": "npm run build:template && node scripts/build/adaptive-build.js",
     "build:prod": "npm run build:template && set NODE_ENV=production&& node scripts/build/adaptive-build.js",
-    "build": "npm run build:template && node scripts/build/adaptive-build.js",
+    "build:template": "npm run content:generate && node scripts/build/template-build.js",
+    "content:generate": "node scripts/build/content-processor.js",
 
-    "check-structure": "node scripts/check-structure.js",
-    "verify": "node scripts/verify-functionality.js",
+    "check": "npm run check-structure && npm run verify",
+    "check-structure": "node scripts/utils/check-structure.js",
+    "check-debug": "node scripts/utils/check-structure-debug.js",
+    "verify": "node scripts/utils/verify-functionality.js",
+    "diagnose": "node scripts/utils/diagnose.js",
     "full-check": "npm run check-structure && npm run verify",
 
-    "audit": "node scripts/auditor/auditor-cli.js",
-    "audit:fix": "node scripts/auditor/fixers/auto-fixer.js",
-    "audit:html": "node scripts/auditor/analyzers/html-analyzer.js",
-    "audit:css": "node scripts/auditor/analyzers/css-analyzer.js",
-    "audit:js": "node scripts/auditor/analyzers/js-analyzer.js",
+    "audit": "node scripts/audit/auditor-cli.js",
+    "audit:fix": "node scripts/audit/fixers/auto-fixer.js",
+    "audit:html": "node scripts/audit/analyzers/html-analyzer.js",
+    "audit:css": "node scripts/audit/analyzers/css-analyzer.js",
+    "audit:js": "node scripts/audit/analyzers/js-analyzer.js",
+    "audit:report": "node scripts/audit/core/report-generator.js",
 
     "test": "node scripts/test/test-runner.js",
     "test:build": "npm run build:dev && npm run test",
 
-    "dev": "npm run build:dev && npx serve dist",
     "deploy": "node scripts/deploy/deploy.js",
     "clean": "rm -rf dist logs",
     "analyze": "node scripts/analyze/analyze-build.js"
